<resources>
    <string name="app_name">Alarm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="my_alarms">My Alarms</string>
    <string name="save">Save</string>
    <string name="there_is_no_alarm">There is no alarm!</string>
    <string name="app_needs_permission_to_post_notification">App needs permission to post notification!</string>
</resources>